# cut

./: .gitignore  CMakeLists.txt  Makefile  README.md  analyzer.c  analyzer.h  analyzer_test.c  analyzer_test.h  channel.c  channel.h  channel_test.c  channel_test.h  core_util_message.c  core_util_message.h  core_util_message_test.c  core_util_message_test.h  helper.c  helper.h  helper_test.c  helper_test.h  log_message.c  log_message.h  log_message_test.c  logger_test.c  logger_test.h  main.c  main_test.c  printer.c  printer_test.c  printer_test.h  reader.c  reader.h  reader_test.c  reader_test.h  text_message.c  text_message.h  text_message_test.c  text_message_test.h  watchdog.c  watchdog.h  (+4 more)
headers/: logger.h  printer.h  watcher.h
src/: CMakeLists.txt  analyzer.h  helper.c  helper.h  logger.c  printer.c  reader.c  watchdog.c  watchdog.h
srcs/: analyzer.c  channel.c  core_util_message.c  helper.c  log_message.c  logger.c  main.c  printer.c  reader.c  text_message.c  watchdog.c  watcher.c
test_headers/: channel_test.h  log_message_test.h
test_src/: CMakeLists.txt  analyzer_test.c  channel_test.c  core_util_message_test.c  helper_test.c  log_message_test.c  logger_test.c  printer_test.c  reader_test.c  text_message_test.c  watcher_test.c
test_srcs/: analyzer_test.c  channel_test.c  core_util_message_test.c  helper_test.c  log_message_test.c  logger_test.c  main_test.c  printer_test.c  reader_test.c  text_message_test.c  watcher_test.c
